2004-12-16  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network-conf.in: added "set_profile" directive, which sets all
	the configuration from a profile name

2004-12-16  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network-conf.in: avoid the creation of empty <configuration> tags
	* network.pl.in: don't report when running iwconfig, it was getting
	saved in the profiles file

2004-12-14  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network-conf.in, network.pl.in: improved old profiles fixing, 
	fixed plip interfaces enabling, accept other characters than numbers 
	in dial prefix, other code improvements

2004-12-06  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network-conf.in (fixdown_profile_interface_format),
	(fixdown_profile_format): added functions for translating the old
	profile format to the new one

2004-12-06  Carlos Garnacho Parro  <carlosg@gnome.org>

        * file.pl.in (gst_file_get_temp_name): added.
        * network.pl.in (gst_network_enable_iface_with_config): splitted in
        several functions. Handled too the modem stuff, creating a temporary
        chat file and using pppd.

2004-12-01  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in: moved pppscripts creation to a generic function,
	made debian use pppscript instead of wvial. s/wvsection/section/g

2004-11-26  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in (gst_network_enable_iface_with_config): little fix 
	with multiword essids

2004-11-23  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in: add the PPP interface EVEN if it's not configured

2004-11-23  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.pl.in (gst_network_interfaces_get): began to handle PPP
	devices

2004-11-22  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network-conf.in: added a small hack for being sure that the
	interface is really down when possibly messing ifup/ifdown/ifconfig
	calls

2004-11-20  Carlos Garnacho Parro  <carlosg@gnome.org>
