@@ -1,3 +1,7 @@
+2004-12-20  Carlos Garnacho Parro  <carlosg@gnome.org>
+
+	* network-conf.in: added the "save_profiles" directive
+
 2004-12-16  Carlos Garnacho Parro  <carlosg@gnome.org>
 
 	* network-conf.in: added "set_profile" directive, which sets all
